refs #2834. alignment for header titles corrected

--- a/public/stylesheets/dashboard.css
+++ b/public/stylesheets/dashboard.css
@@ -317,22 +317,6 @@ a img {
   padding: 7px 13px 7px 10px;
 }
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 .head-wrapper {
   float: left;
   width: 948px;
@@ -389,7 +373,7 @@ a img {
 .d1 {
   float: left;
   font-size: 12px !important;
-  width: 150px;
+  width: 115px;
 }
 .d2 {
   float: left;
